--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/approuter": "^5.8.0",
-    "@sap/audit-logging": "^2.2.4",
+    "@sap/approuter": "^5.15.0",
+    "@sap/audit-logging": "^2.3.0",
     "@sap/cds": "^2.10.3",
     "@sap/cds-compiler": "^1.1.3",
     "@sap/cds-hana": "^0.9.0",
@@ -36,7 +36,7 @@
     "@sap/di.code-validation.grunt": "^1.0.7",
     "@sap/di.code-validation.js": "^1.1.6",
     "@sap/di.code-validation.json": "^1.0.8",
-    "@sap/di.code-validation.xml": "^1.1.11",
+    "@sap/di.code-validation.xml": "^1.1.12",
     "@sap/dwf-core": "^2.2.1",
     "@sap/dwf-deploy": "^2.4.0",
     "@sap/dwf-dlm-backend": "^2.3.0",
@@ -45,29 +45,30 @@
     "@sap/dwf-ndso-backend": "^2.2.0",
     "@sap/e2e-trace": "^1.3.0",
     "@sap/edmx2csn": "^1.0.5",
-    "@sap/eslint-plugin-webide-feature": "^1.3.20",
+    "@sap/eslint-plugin-webide-feature": "^1.3.22",
     "@sap/fibers": "^2.0.2-0",
     "@sap/fibrous": "^0.5.0-3",
     "@sap/generator-cds": "^1.0.13",
-    "@sap/grunt-sapui5-bestpractice-build": "^1.3.64",
+    "@sap/grunt-sapui5-bestpractice-build": "^1.3.65",
     "@sap/grunt-sapui5-bestpractice-test": "^2.0.0",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
     "@sap/hana-client": "^2.3.123",
-    "@sap/hdbext": "^5.0.0",
+    "@sap/hdbext": "^5.1.0",
     "@sap/hdi": "^1.1.4",
-    "@sap/hdi-deploy": "^3.8.2",
+    "@sap/hdi-deploy": "^3.10.0",
     "@sap/hdi-dynamic-deploy": "^1.4.2",
     "@sap/html5-app-deployer": "^2.0.1",
-    "@sap/instance-manager": "^1.3.4",
+    "@sap/instance-manager": "^1.4.0",
     "@sap/jobs-client": "^1.3.4",
-    "@sap/logging": "^4.0.2",
-    "@sap/node-jwt": "^1.4.12",
+    "@sap/logging": "^4.1.0",
+    "@sap/node-jwt": "^1.4.13",
     "@sap/node-vsi": "^1.4.12",
     "@sap/odata-v4": "^1.7.0",
+    "@sap/portal-cf-content-deployer": "^3.7.0-20190408090458",
     "@sap/sds-deploy": "^2.0.4",
     "@sap/site-app-server": "^1.17.0",
-    "@sap/site-content-deployer": "^1.19.1",
-    "@sap/site-entry": "^1.9.17",
+    "@sap/site-content-deployer": "^1.20.0",
+    "@sap/site-entry": "^1.9.23",
     "@sap/test-nodejs-dmz-github": "^1.1.7",
     "@sap/textanalysis": "^1.1.0",
     "@sap/textbundle": "^2.2.1",
@@ -79,10 +80,10 @@
     "@sap/xb-msg-env": "^0.9.0",
     "@sap/xb-msg-mqtt-v311": "^0.9.0",
     "@sap/xsenv": "^1.2.9",
-    "@sap/xsjs": "^4.0.1",
+    "@sap/xsjs": "^4.0.2",
     "@sap/xsjs-test": "^2.0.16",
-    "@sap/xsodata": "^4.3.0",
+    "@sap/xsodata": "^4.4.0",
     "@sap/xss-secure": "^2.1.0",
-    "@sap/xssec": "^2.1.15"
+    "@sap/xssec": "^2.1.16"
   }
 }
