--- a/package.json
+++ b/package.json
@@ -21,5 +21,26 @@
     "url": "https://github.com/Seeker0/SAP-NPM-API-collection/issues"
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@sap/approuter": "6.4.0",
+    "@sap/site-entry": "1.30.0",
+    "@sap/grunt-sapui5-bestpractice-build": "1.4.1",
+    "@sap/xssec": "2.2.3",
+    "@sap/node-jwt": "1.6.4",
+    "@sap/xsjs": "5.2.0",
+    "@sap/cds": "3.16.3",
+    "@sap/xsodata": "4.5.4",
+    "@sap/hdbext": "6.0.1",
+    "@sap/portal-cf-content-deployer": "3.18.0-20190911111653",
+    "@sap/di.code-validation.xml": "1.1.16",
+    "@sap/generator-cds": "2.8.2",
+    "@sap/cds-compiler": "1.18.2",
+    "@sap/logging": "5.0.2",
+    "@sap/audit-logging": "3.0.2",
+    "@sap/hana-client": "2.4.155",
+    "@sap/site-content-deployer": "1.20.0",
+    "@sap/hdi-deploy": "3.11.2",
+    "@sap/cds-hana": "1.17.1",
+    "@sap/cds-ql": "1.18.2"
+  }
 }
