--- a/package.json
+++ b/package.json
@@ -22,26 +22,25 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/approuter": "6.4.0",
-    "@sap/audit-logging": "3.0.2",
-    "@sap/cds": "3.17.4",
-    "@sap/cds-compiler": "1.18.2",
-    "@sap/cds-hana": "1.17.1",
-    "@sap/cds-ql": "1.18.2",
-    "@sap/cds-rest": "^1.1.2",
-    "@sap/di.code-validation.xml": "1.1.16",
-    "@sap/generator-cds": "2.8.2",
-    "@sap/grunt-sapui5-bestpractice-build": "1.4.1",
-    "@sap/hana-client": "2.4.155",
-    "@sap/hdbext": "6.0.1",
-    "@sap/hdi-deploy": "3.11.2",
-    "@sap/logging": "5.0.2",
-    "@sap/node-jwt": "1.6.4",
-    "@sap/portal-cf-content-deployer": "3.18.0-20190911111653",
-    "@sap/site-content-deployer": "1.20.0",
+    "@sap/approuter": "6.5.1",
     "@sap/site-entry": "1.30.0",
-    "@sap/xsjs": "5.2.0",
-    "@sap/xsodata": "4.5.4",
-    "@sap/xssec": "2.2.3"
+    "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
+    "@sap/xssec": "2.2.3",
+    "@sap/node-jwt": "1.6.5",
+    "@sap/cds": "3.18.3",
+    "@sap/xsjs": "5.2.2",
+    "@sap/xsodata": "4.7.0",
+    "@sap/hdbext": "6.1.0",
+    "@sap/generator-cds": "2.9.0",
+    "@sap/portal-cf-content-deployer": "3.18.0-20190911111653",
+    "@sap/cds-compiler": "1.19.2",
+    "@sap/di.code-validation.xml": "1.1.16",
+    "@sap/hana-client": "2.4.167",
+    "@sap/hdi-deploy": "3.11.5",
+    "@sap/cloud-sdk-core": "1.11.3",
+    "@sap/cloud-sdk-test-util": "1.11.3",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.11.3",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.11.3",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.11.3"
   }
 }
