--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@sap/cloud-sdk-vdm-bank-detail-service": "1.12.0",
     "@sap/cloud-sdk-vdm-batch-service": "1.12.0",
     "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.12.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.12.0"
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.12.0",
+    "@sap/cds-odata-v2-adapter-proxy": "latest"
   }
 }
