--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "@sap/node-jwt": "1.6.5",
     "@sap/xsodata": "4.7.0",
     "@sap/hdbext": "6.1.1",
-    "@sap/generator-cds": "2.10.2",
-    "@sap/portal-cf-content-deployer": "3.24.0-20191119141917",
-    "@sap/cds-compiler": "1.20.3",
-    "@sap/cloud-sdk-core": "1.13.1",
-    "@sap/cloud-sdk-test-util": "1.13.1",
-    "@sap/cloud-sdk-vdm-accounting-document-service": "1.13.1",
-    "@sap/cloud-sdk-vdm-attachment-service": "1.13.1",
-    "@sap/cloud-sdk-vdm-bank-detail-service": "1.13.1",
-    "@sap/cloud-sdk-vdm-batch-service": "1.13.1",
-    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.13.1",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.13.1",
+    "@sap/cloud-sdk-core": "1.14.0",
+    "@sap/cloud-sdk-test-util": "1.14.0",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-batch-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.14.0",
+    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.14.0",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/xsenv": "latest",
-    "@sap/hana-client": "latest"
+    "@sap/hana-client": "latest",
+    "@sap/faas": "latest"
   }
 }
