--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
   "dependencies": {
     "@sap/approuter": "6.7.0",
     "@sap/site-entry": "1.30.0",
-    "@sap/cds": "3.20.1",
+    "@sap/cds": "3.21.0",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
+    "@sap/xsjs": "5.3.1",
     "@sap/xssec": "2.2.4",
-    "@sap/xsjs": "5.3.0",
     "@sap/node-jwt": "1.6.5",
     "@sap/xsodata": "5.0.0",
+    "@sap/generator-cds": "2.11.1",
     "@sap/hdbext": "6.1.1",
+    "@sap/cds-compiler": "1.21.1",
     "@sap/cloud-sdk-core": "1.14.0",
     "@sap/cloud-sdk-test-util": "1.14.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.14.0",
@@ -40,8 +42,6 @@
     "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.14.0",
     "@sap/cloud-sdk-vdm-bill-of-material-service": "1.14.0",
     "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.14.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.14.0",
-    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.14.0",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/xsenv": "latest",
     "@sap/hana-client": "latest",
