portal-cf-content-deployer

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sap/xssec": "2.2.4",
     "@sap/node-jwt": "1.6.5",
     "@sap/xsodata": "5.0.0",
+    "@sap/portal-cf-content-deployer": "3.27.0-20200101090045",
     "@sap/cloud-sdk-core": "1.15.0",
     "@sap/cloud-sdk-test-util": "1.15.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.15.0",
@@ -41,7 +42,6 @@
     "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.15.0",
     "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.15.0",
     "@sap/cloud-sdk-vdm-billing-document-request-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-billing-document-service": "1.15.0",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/xsenv": "latest",
     "@sap/hana-client": "latest",
