--- a/package.json
+++ b/package.json
@@ -30,18 +30,19 @@
     "@sap/xssec": "2.2.4",
     "@sap/node-jwt": "1.6.5",
     "@sap/xsodata": "5.0.0",
-    "@sap/portal-cf-content-deployer": "3.27.0-20200101090045",
-    "@sap/cloud-sdk-core": "1.15.0",
-    "@sap/cloud-sdk-test-util": "1.15.0",
-    "@sap/cloud-sdk-vdm-accounting-document-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-attachment-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-bank-detail-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-batch-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.15.0",
-    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.15.0",
+    "@sap/cloud-sdk-core": "1.15.1",
+    "@sap/cloud-sdk-test-util": "1.15.1",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-batch-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.15.1",
+    "@sap/cloud-sdk-vdm-billing-document-service": "1.15.1",
+    "@sap/portal-cf-content-deployer": "latest",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/cds-hana": "latest",
     "@sap/cds-messaging": "latest",
