--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@sap/approuter": "6.7.1",
     "@sap/cds": "3.21.2",
-    "@sap/site-entry": "1.30.0",
+    "@sap/site-entry": "latest",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
     "@sap/xsjs": "5.3.1",
     "@sap/xssec": "2.2.4",
