--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@sap/edm-converters": "latest",
     "@sap/edmx2csn": "latest",
     "@sap/xsenv": "latest",
+    "@sap/odata-server": "latest",
     "@sap/logging": "latest",
     "@sap/hana-client": "latest",
     "@sap/faas": "latest"
