--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@sap/edm-converters": "latest",
     "@sap/edmx2csn": "latest",
     "@sap/cloud-sdk-generator": "latest",
+    "@sap/cloud-sdk-util": "latest",
     "@sap/xsenv": "latest",
     "@sap/odata-server": "latest",
     "@sap/logging": "latest",
