--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@sap/site-entry": "latest",
     "@sap/xssec": "2.2.5",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
+    "@sap/node-jwt": "latest",
     "@sap/xsjs": "5.3.1",
-    "@sap/node-jwt": "1.6.6",
     "@sap/cloud-sdk-core": "1.17.2",
     "@sap/cloud-sdk-test-util": "1.17.2",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.17.2",
@@ -46,6 +46,7 @@
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/cds-compiler": "latest",
     "@sap/cds-hana": "latest",
+    "@sap/generator-cds": "latest",
     "@sap/cds-dk": "latest",
     "@sap/cds-messaging": "latest",
     "@sap/cds-mtx": "latest",
