Update fibers and xb-msg-amqp-v100

--- a/package.json
+++ b/package.json
@@ -28,20 +28,20 @@
     "@sap/xssec": "2.2.5",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
     "@sap/node-jwt": "latest",
-    "@sap/xsjs": "5.3.1",
-    "@sap/cloud-sdk-core": "1.17.2",
-    "@sap/cloud-sdk-test-util": "1.17.2",
-    "@sap/cloud-sdk-vdm-accounting-document-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-attachment-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-bank-detail-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-batch-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-billing-document-service": "1.17.2",
-    "@sap/cloud-sdk-vdm-business-area-service": "1.17.2",
+    "@sap/xsjs": "latest",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-batch-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-billing-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-area-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-event-queue-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.18.0",
     "@sap/portal-cf-content-deployer": "latest",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/cds-compiler": "latest",
@@ -57,6 +57,7 @@
     "@sap/cds-sqlite": "latest",
     "@sap/edm-converters": "latest",
     "@sap/edmx2csn": "latest",
+    "@sap/fibers": "latest",
     "@sap/cloud-sdk-generator": "latest",
     "@sap/cloud-sdk-util": "latest",
     "@sap/xsenv": "latest",
@@ -64,6 +65,7 @@
     "@sap/logging": "latest",
     "@sap/hana-client": "latest",
     "@sap/faas": "latest",
+    "@sap/xb-msg-amqp-v100": "latest",
     "@sap/xsodata": "latest"
   }
 }
