Update audit-logging & cds-ql

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sap/cloud-sdk-vdm-business-area-service": "1.18.0",
     "@sap/cloud-sdk-vdm-business-event-queue-service": "1.18.0",
     "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.18.0",
+    "@sap/audit-logging": "latest",
     "@sap/portal-cf-content-deployer": "latest",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
     "@sap/cds-compiler": "latest",
@@ -53,11 +54,14 @@
     "@sap/cds-reflect": "latest",
     "@sap/cds-rest": "latest",
     "@sap/cds-services": "latest",
+    "@sap/cds-ql": "latest",
     "@sap/cds-sql": "latest",
     "@sap/cds-sqlite": "latest",
+    "@sap/dwf-core": "latest",
     "@sap/edm-converters": "latest",
     "@sap/edmx2csn": "latest",
     "@sap/fibers": "latest",
+    "@sap/cloud-sdk-core": "latest",
     "@sap/cloud-sdk-generator": "latest",
     "@sap/cloud-sdk-util": "latest",
     "@sap/xsenv": "latest",
