--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "@sap/xsenv": "latest",
     "@sap/odata-server": "latest",
     "@sap/logging": "latest",
+    "@sap/node-vsi": "latest",
     "@sap/hana-client": "latest",
+    "@sap/hdbext": "latest",
     "@sap/hdi-dynamic-deploy": "latest",
     "@sap/faas": "latest",
     "@sap/xb-msg-amqp-v091": "latest",
