--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/approuter": "7.1.2",
+    "@sap/approuter": "7.1.3",
     "@sap/cds": "3.34.1",
     "@sap/site-entry": "latest",
     "@sap/xsjs": "latest",
+    "@sap/xssec": "3.0.0",
     "@sap/node-jwt": "latest",
-    "@sap/xssec": "2.2.5",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
+    "@sap/xsodata": "latest",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.18.0",
     "@sap/cloud-sdk-vdm-attachment-service": "1.18.0",
     "@sap/cloud-sdk-vdm-bank-detail-service": "1.18.0",
@@ -41,7 +42,6 @@
     "@sap/cloud-sdk-vdm-billing-document-service": "1.18.0",
     "@sap/cloud-sdk-vdm-business-area-service": "1.18.0",
     "@sap/cloud-sdk-vdm-business-event-queue-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.18.0",
     "@sap/audit-logging": "latest",
     "@sap/portal-cf-content-deployer": "latest",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
@@ -75,7 +75,6 @@
     "@sap/xb-msg-amqp-v091": "latest",
     "@sap/xb-msg-env": "latest",
     "@sap/xb-msg-mqtt-v311": "latest",
-    "@sap/xb-msg-amqp-v100": "latest",
-    "@sap/xsodata": "latest"
+    "@sap/xb-msg-amqp-v100": "latest"
   }
 }
