Cloud SDK link to https://github.com/SAP/cloud-sdk

--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
     "@sap/cds": "3.34.1",
     "@sap/site-entry": "latest",
     "@sap/xsjs": "latest",
-    "@sap/xssec": "3.0.1",
+    "@sap/xssec": "3.0.2",
     "@sap/node-jwt": "latest",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
-    "@sap/xsodata": "latest",
-    "@sap/cloud-sdk-vdm-accounting-document-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-attachment-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-bank-detail-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-batch-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-billing-document-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-business-area-service": "1.18.0",
-    "@sap/cloud-sdk-vdm-business-event-queue-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-batch-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-billing-document-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-business-area-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-business-event-queue-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.19.0",
     "@sap/audit-logging": "latest",
     "@sap/portal-cf-content-deployer": "latest",
     "@sap/cds-odata-v2-adapter-proxy": "latest",
@@ -75,6 +75,7 @@
     "@sap/xb-msg-amqp-v091": "latest",
     "@sap/xb-msg-env": "latest",
     "@sap/xb-msg-mqtt-v311": "latest",
-    "@sap/xb-msg-amqp-v100": "latest"
+    "@sap/xb-msg-amqp-v100": "latest",
+    "@sap/xsodata": "latest"
   }
 }
