--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Collection of current SAP package api's",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,61 +23,273 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/approuter": "8.1.0",
-    "@sap/cds": "3.34.2",
-    "@sap/site-entry": "latest",
-    "@sap/xsjs": "latest",
-    "@sap/xssec": "3.0.3",
-    "@sap/node-jwt": "latest",
+    "@sap/approuter": "8.1.3",
+    "@sap/audit-logging": "2.2.1",
+    "@sap/cds": "3.34.3",
+    "@sap/cds-compiler": "1.26.2",
+    "@sap/cds-dk": "1.8.5",
+    "@sap/cds-foss": "1.2.0",
+    "@sap/cds-hana": "1.25.1",
+    "@sap/cds-lsp": "3.3.2",
+    "@sap/cds-messaging": "1.8.2",
+    "@sap/cds-mtx": "1.0.13",
+    "@sap/cds-odata-v2-adapter-proxy": "1.4.36",
+    "@sap/cds-ql": "1.21.0",
+    "@sap/cds-reflect": "2.11.0",
+    "@sap/cds-rest": "1.6.2",
+    "@sap/cds-runtime": "1.2.2",
+    "@sap/cds-services": "1.27.1",
+    "@sap/cds-sidecar-client": "1.1.3",
+    "@sap/cds-sql": "1.24.0",
+    "@sap/cds-sqlite": "1.24.0",
+    "@sap/cloud-sdk-analytics": "1.15.1",
+    "@sap/cloud-sdk-core": "1.6.1",
+    "@sap/cloud-sdk-generator": "1.6.1",
+    "@sap/cloud-sdk-generator-rest": "1.17.0",
+    "@sap/cloud-sdk-test-util": "1.6.1",
+    "@sap/cloud-sdk-util": "1.17.2",
+    "@sap/cloud-sdk-vdm": "1.18.0",
+    "@sap/cloud-sdk-vdm-accounting-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-activity-type-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-attachment-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bank-detail-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-batch-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-billing-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-brazil-business-place-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-brazil-nota-fiscal-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-buffer-profile-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-buffer-sizing-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-event-queue-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-partner-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-situation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-business-situation-type-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-central-purchase-contract-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-change-master-service": "1.19.0",
+    "@sap/cloud-sdk-vdm-change-master-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-change-record-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-characteristic-attribute-catalog-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-characteristic-data-for-classification-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-chart-of-accounts-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-class-data-for-classification-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-cloud-print-pull-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-commercial-project-detail-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-commercial-project-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-company-code-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-condition-contract-type-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-contract-accounting-sepa-mandate-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-controlling-area-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-cost-center-activity-type-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-defect-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-delivery-document-with-credit-block-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-distribution-channel-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-division-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-document-management-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-enterprise-project-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-event-based-revenue-recognition-integration-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-external-job-scheduler-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-financial-planning-data-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-financial-planning-entry-item-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-forecast-demand-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-functional-area-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-glaccount-in-chart-of-accounts-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-glaccount-line-item-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-group-reporting-master-data-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-group-reporting-transaction-data-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-handling-unit-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-inbound-delivery-service": "1.1.0",
+    "@sap/cloud-sdk-vdm-inbound-delivery-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-incoming-vat-invoice-china-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-inspection-lot-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-inspection-method-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-inspection-plan-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-journal-entry-item-basic-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-just-in-time-call-process-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-kanban-control-cycle-service": "1.2.1",
+    "@sap/cloud-sdk-vdm-kanban-control-cycle-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-ledger-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-legal-category-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-legal-document-access-level-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-legal-document-content-type-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-legal-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-legal-transaction-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-master-inspection-characteristic-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-master-recipe-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-material-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-material-planning-data-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-material-stock-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-material-valuation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-order-bill-of-material-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-outbound-delivery-service": "1.1.0",
+    "@sap/cloud-sdk-vdm-outbound-delivery-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-partner-company-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-payment-advice-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-personnel-settlement-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-phase-relationship-type-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-physical-inventory-doc-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-planned-independent-requirement-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-planned-orders-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-planning-category-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-process-order-confirmation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-process-order-confirmation-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-process-orders-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-allocation-object-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-allocation-sequence-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-availability-info-basic-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-group-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-master-data-including-classification-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-product-structure-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-production-order-confirmation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-production-order-confirmation-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-production-order-v2-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-production-orders-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-production-routing-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-production-supply-area-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-profit-center-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchase-contract-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchase-order-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchase-requisition-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-category-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-inforecord-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-pricing-condition-record-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-pricing-condition-type-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-pricing-procedure-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-quota-arrangement-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-purchasing-source-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-quality-info-record-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-raw-substance-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-real-substance-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-recipe-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-report-ehs-incident-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-request-for-quotation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-reservation-document-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-contract-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-district-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-doc-with-credit-block-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-inquiry-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-order-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-order-simulation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-order-without-charge-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-organization-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-pricing-condition-record-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-pricing-condition-type-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-pricing-procedure-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-quotation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sales-scheduling-agreement-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-sap-graph": "1.17.0",
+    "@sap/cloud-sdk-vdm-scheduling-agreement-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-segment-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-service-confirmation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-service-contract-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-service-entry-sheet-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-service-order-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-service-quotation-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-sold-to-party-assignment-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-statistical-key-figure-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-subsequent-billing-document-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-supplier-activity-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-activity-task-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-evaluation-response-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-evaluation-score-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-evaluation-scorecard-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-invoice-process-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-supplier-quotation-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-treasury-position-flow-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-treasury-posting-journal-entry-line-item-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-trial-balance-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-warehouse-inbound-delivery-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-warehouse-outbound-delivery-order-service": "1.19.1",
+    "@sap/cloud-sdk-vdm-warehouse-physical-inventory-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-warehouse-resource-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-warehouse-service": "1.19.2",
+    "@sap/cloud-sdk-vdm-warehouse-storage-bin-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-warehouse-task-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-work-centers-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-workforce-availability-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-workforce-skill-tags-service": "1.18.0",
+    "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.18.0",
+    "@sap/consume-services": "1.3.0",
+    "@sap/consume-services-types": "0.1.3",
+    "@sap/destinations": "0.2.1",
+    "@sap/di.code-validation.core": "1.0.3",
+    "@sap/di.code-validation.grunt": "1.0.7",
+    "@sap/di.code-validation.js": "1.1.7",
+    "@sap/di.code-validation.json": "1.0.10",
+    "@sap/di.code-validation.xml": "1.1.18",
+    "@sap/dwf-core": "2.2.1",
+    "@sap/dwf-deploy": "2.2.1",
+    "@sap/dwf-dlm-backend": "2.2.3",
+    "@sap/dwf-dws-client": "2.2.3",
+    "@sap/dwf-generator": "2.2.1",
+    "@sap/dwf-ndso-backend": "2.2.0",
+    "@sap/e2e-trace": "1.2.0",
+    "@sap/edm-converters": "1.0.29",
+    "@sap/edmx2csn": "1.0.1",
+    "@sap/eslint-plugin-ui5-jsdocs": "1.0.0",
+    "@sap/eslint-plugin-webide-feature": "1.3.22",
+    "@sap/faas": "0.6.3",
+    "@sap/fibers": "3.1.1-1",
+    "@sap/fibrous": "0.4.0-12",
+    "@sap/fiori-json-services": "1.0.1",
+    "@sap/generator-cap-project": "1.0.7",
+    "@sap/generator-cds": "2.14.2",
+    "@sap/generator-fiori-elements": "1.0.4",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.2",
-    "@sap/cloud-sdk-vdm-accounting-document-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-attachment-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-bank-detail-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-batch-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-comparison-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-billing-document-request-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-billing-document-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-business-area-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-business-event-queue-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-business-event-subscription-service": "1.19.2",
-    "@sap/audit-logging": "latest",
-    "@sap/portal-cf-content-deployer": "latest",
-    "@sap/cds-odata-v2-adapter-proxy": "latest",
-    "@sap/cds-compiler": "latest",
-    "@sap/cds-hana": "latest",
-    "@sap/generator-cds": "latest",
-    "@sap/cds-dk": "latest",
-    "@sap/cds-messaging": "latest",
-    "@sap/cds-mtx": "latest",
-    "@sap/cds-reflect": "latest",
-    "@sap/cds-rest": "latest",
-    "@sap/cds-services": "latest",
-    "@sap/cds-ql": "latest",
-    "@sap/cds-sql": "latest",
-    "@sap/cds-sqlite": "latest",
-    "@sap/dwf-core": "latest",
-    "@sap/edm-converters": "latest",
-    "@sap/edmx2csn": "latest",
-    "@sap/fibers": "latest",
-    "@sap/cloud-sdk-core": "latest",
-    "@sap/cloud-sdk-generator": "latest",
-    "@sap/cloud-sdk-util": "latest",
-    "@sap/xsenv": "latest",
-    "@sap/odata-server": "latest",
-    "@sap/textbundle": "latest",
-    "@sap/logging": "latest",
-    "@sap/node-vsi": "latest",
-    "@sap/hana-client": "latest",
-    "@sap/hdbext": "latest",
-    "@sap/hdi-dynamic-deploy": "latest",
-    "@sap/faas": "latest",
-    "@sap/xb-msg-amqp-v091": "latest",
-    "@sap/xb-msg-env": "latest",
-    "@sap/xb-msg-mqtt-v311": "latest",
-    "@sap/xb-msg-amqp-v100": "latest",
-    "@sap/xsodata": "latest"
+    "@sap/grunt-sapui5-bestpractice-test": "0.0.1",
+    "@sap/grunt-sapui5module-bestpractice-build": "1.0.1",
+    "@sap/grunt-tests-webide-bestpractice": "0.0.12",
+    "@sap/hana-client": "2.4.202",
+    "@sap/hdbext": "6.1.1",
+    "@sap/hdi": "2.2.1",
+    "@sap/hdi-deploy": "3.11.11",
+    "@sap/hdi-dynamic-deploy": "1.7.1",
+    "@sap/html5-app-deployer": "2.0.3",
+    "@sap/html5-repo-mock": "1.4.1",
+    "@sap/instance-manager": "1.1.0",
+    "@sap/jobs-client": "1.5.3",
+    "@sap/logging": "3.3.1",
+    "@sap/modules-exploration": "1.6.1",
+    "@sap/node-jwt": "1.6.11",
+    "@sap/node-vsi": "1.4.19",
+    "@sap/odata-commons": "2.4.2",
+    "@sap/odata-server": "1.8.2",
+    "@sap/odata-v4": "1.7.0",
+    "@sap/pdms-sdk": "1.0.0",
+    "@sap/portal-cf-content-deployer": "4.6.0-20200610154834",
+    "@sap/sbf": "6.1.0",
+    "@sap/sbss": "4.1.1",
+    "@sap/sds-deploy": "2.0.5",
+    "@sap/service-providers": "0.2.2",
+    "@sap/site-app-server": "1.9.5",
+    "@sap/site-content-deployer": "1.9.5",
+    "@sap/site-entry": "1.9.23",
+    "@sap/textanalysis": "1.1.0",
+    "@sap/textbundle": "2.2.1",
+    "@sap/textmining": "1.1.6",
+    "@sap/ui-annotations": "2.0.3",
+    "@sap/ui5-builder-webide-extension": "1.0.11",
+    "@sap/ui5-jsdocs": "0.2.0",
+    "@sap/ux-specification": "1.76.12",
+    "@sap/ux-ui5-tooling": "1.0.0",
+    "@sap/vscode-cds": "2.3.0",
+    "@sap/wing-service-binding": "1.3.2",
+    "@sap/wing-service-explorer": "1.2.0",
+    "@sap/xb-msg": "0.9.9",
+    "@sap/xb-msg-amqp-v091": "0.9.9",
+    "@sap/xb-msg-amqp-v100": "0.9.40",
+    "@sap/xb-msg-env": "0.9.4",
+    "@sap/xb-msg-mqtt-v311": "0.9.12",
+    "@sap/xsenv": "3.0.0",
+    "@sap/xsjs": "3.3.0",
+    "@sap/xsjs-test": "2.0.15",
+    "@sap/xsodata": "3.6.7",
+    "@sap/xss-secure": "2.0.11",
+    "@sap/xssec": "3.0.3"
   }
 }
