Updated & New packages Updated: - cds-compiler - cds-odata-v2-adapter-proxy New: - mta-lib - generator-base-mta-module

--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@sap/approuter": "8.4.1",
     "@sap/audit-logging": "3.1.1",
     "@sap/cds": "3.34.3",
-    "@sap/cds-compiler": "1.26.2",
+    "@sap/cds-compiler": "1.35.0",
     "@sap/cds-dk": "1.8.6",
     "@sap/cds-foss": "1.2.0",
     "@sap/cds-hana": "1.25.1",
     "@sap/cds-lsp": "3.3.2",
     "@sap/cds-messaging": "1.8.2",
     "@sap/cds-mtx": "1.0.13",
-    "@sap/cds-odata-v2-adapter-proxy": "1.4.37",
+    "@sap/cds-odata-v2-adapter-proxy": "1.4.41",
     "@sap/cds-ql": "1.21.0",
     "@sap/cds-reflect": "2.11.0",
     "@sap/cds-rest": "1.6.2",
@@ -45,7 +45,6 @@
     "@sap/cloud-sdk-analytics": "1.17.2",
     "@sap/cloud-sdk-core": "1.17.2",
     "@sap/cloud-sdk-generator": "1.17.2",
-    "@sap/cloud-sdk-generator-rest": "1.17.0",
     "@sap/cloud-sdk-test-util": "1.17.2",
     "@sap/cloud-sdk-util": "1.17.2",
     "@sap/cloud-sdk-vdm": "1.18.0",
@@ -199,7 +198,6 @@
     "@sap/cloud-sdk-vdm-sales-pricing-procedure-service": "1.19.2",
     "@sap/cloud-sdk-vdm-sales-quotation-service": "1.18.0",
     "@sap/cloud-sdk-vdm-sales-scheduling-agreement-service": "1.19.2",
-    "@sap/cloud-sdk-vdm-sap-graph": "1.17.0",
     "@sap/cloud-sdk-vdm-scheduling-agreement-service": "1.19.2",
     "@sap/cloud-sdk-vdm-segment-service": "1.19.2",
     "@sap/cloud-sdk-vdm-service-confirmation-service": "1.19.2",
@@ -231,7 +229,7 @@
     "@sap/cloud-sdk-vdm-workforce-availability-service": "1.19.2",
     "@sap/cloud-sdk-vdm-workforce-skill-tags-service": "1.19.2",
     "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.19.2",
-    "@sap/consume-services": "1.4.1",
+    "@sap/consume-services": "1.4.2",
     "@sap/consume-services-types": "0.3.5",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.13",
@@ -254,6 +252,7 @@
     "@sap/fibers": "4.0.3-0",
     "@sap/fibrous": "0.5.0-5",
     "@sap/fiori-json-services": "1.0.1",
+    "@sap/generator-base-mta-module": "1.1.2",
     "@sap/generator-cap-project": "1.0.7",
     "@sap/generator-cds": "2.14.2",
     "@sap/generator-fiori-elements": "1.0.8",
@@ -272,6 +271,7 @@
     "@sap/jobs-client": "1.5.3",
     "@sap/logging": "5.3.1",
     "@sap/modules-exploration": "1.6.3",
+    "@sap/mta-lib": "1.4.1",
     "@sap/node-jwt": "1.6.11",
     "@sap/node-vsi": "1.4.19",
     "@sap/odata-commons": "2.4.2",
@@ -296,7 +296,7 @@
     "@sap/ux-ui5-tooling": "1.0.10",
     "@sap/vscode-cds": "2.3.0",
     "@sap/wing-service-binding": "1.7.1",
-    "@sap/wing-service-explorer": "1.5.4",
+    "@sap/wing-service-explorer": "1.5.5",
     "@sap/xb-msg": "0.9.9",
     "@sap/xb-msg-amqp-v091": "0.9.9",
     "@sap/xb-msg-amqp-v100": "0.9.40",
