--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@sap/cds-lsp": "3.5.0",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "1.0.20",
-    "@sap/cds-odata-v2-adapter-proxy": "1.4.44",
+    "@sap/cds-odata-v2-adapter-proxy": "1.4.46",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.0",
     "@sap/cds-rest": "1.6.3",
@@ -44,7 +44,7 @@
     "@sap/cds-sidecar-client": "1.1.8",
     "@sap/cds-sql": "1.24.1",
     "@sap/cds-sqlite": "1.24.1",
-    "@sap/cf-tools": "0.6.3",
+    "@sap/cf-tools": "0.6.4",
     "@sap/cloud-sdk-analytics": "1.17.2",
     "@sap/cloud-sdk-core": "1.17.2",
     "@sap/cloud-sdk-generator": "1.17.2",
@@ -293,9 +293,9 @@
     "@sap/grunt-sapui5-bestpractice-test": "2.0.2",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.6",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.5.109",
+    "@sap/hana-client": "2.6.54",
     "@sap/hdbext": "7.0.0",
-    "@sap/hdi": "2.2.5",
+    "@sap/hdi": "2.2.7",
     "@sap/hdi-deploy": "3.11.11",
     "@sap/hdi-dynamic-deploy": "1.7.1",
     "@sap/html5-app-deployer": "2.1.1",
@@ -310,6 +310,7 @@
     "@sap/odata-commons": "2.4.2",
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
+    "@sap/open.fe": "1.82.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.9.0-20200908163923",
     "@sap/sbf": "6.2.2",
@@ -338,10 +339,10 @@
     "@sap/xb-msg-env": "0.9.4",
     "@sap/xb-msg-mqtt-v311": "0.9.12",
     "@sap/xsenv": "3.0.0",
-    "@sap/xsjs": "6.0.3",
+    "@sap/xsjs": "6.0.5",
     "@sap/xsjs-test": "3.1.3",
-    "@sap/xsodata": "7.3.0",
+    "@sap/xsodata": "7.3.3",
     "@sap/xss-secure": "3.1.0",
-    "@sap/xssec": "3.0.9"
+    "@sap/xssec": "3.0.10"
   }
 }
