--- a/package.json
+++ b/package.json
@@ -24,27 +24,29 @@
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
     "@sap/abap-deploy": "0.10.8",
-    "@sap/approuter": "8.5.3",
+    "@sap/apihub-service-provider": "1.0.2",
+    "@sap/approuter": "8.5.4",
     "@sap/asp-middleware": "1.0.1",
     "@sap/audit-logging": "3.2.0",
-    "@sap/cds": "4.1.9",
-    "@sap/cds-compiler": "1.39.0",
-    "@sap/cds-dk": "3.0.0",
-    "@sap/cds-foss": "2.0.0",
+    "@sap/cds": "4.2.3",
+    "@sap/cds-compiler": "1.43.0",
+    "@sap/cds-dk": "3.1.1",
+    "@sap/cds-dk-foss": "1.0.1",
+    "@sap/cds-foss": "2.1.0",
     "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "3.5.0",
+    "@sap/cds-lsp": "4.0.0",
     "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "1.0.20",
+    "@sap/cds-mtx": "1.0.21",
     "@sap/cds-odata-v2-adapter-proxy": "1.4.47",
     "@sap/cds-ql": "1.21.2",
-    "@sap/cds-reflect": "2.13.0",
+    "@sap/cds-reflect": "2.13.1",
     "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.3.1",
+    "@sap/cds-runtime": "2.5.2",
     "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.8",
+    "@sap/cds-sidecar-client": "1.1.9",
     "@sap/cds-sql": "1.24.1",
     "@sap/cds-sqlite": "1.24.1",
-    "@sap/cf-tools": "0.6.5",
+    "@sap/cf-tools": "0.6.6",
     "@sap/cloud-sdk-vdm": "1.21.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.21.0",
     "@sap/cloud-sdk-vdm-activity-type-service": "1.21.0",
@@ -275,14 +277,14 @@
     "@sap/edmx2csn": "1.0.9",
     "@sap/eslint-plugin-ui5-jsdocs": "2.0.1",
     "@sap/eslint-plugin-webide-feature": "1.3.22",
-    "@sap/faas": "0.7.7",
+    "@sap/faas": "0.7.11",
     "@sap/fibers": "4.0.3-0",
     "@sap/fibrous": "0.5.0-5",
     "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-base-mta-module": "1.3.2",
-    "@sap/generator-cap-project": "1.2.0",
-    "@sap/generator-cds": "2.15.7",
-    "@sap/generator-fiori-elements": "1.0.18",
+    "@sap/generator-base-mta-module": "1.3.3",
+    "@sap/generator-cap-project": "1.3.0",
+    "@sap/generator-cds": "2.17.0",
+    "@sap/generator-fiori-elements": "1.0.19",
     "@sap/generator-fiori-freestyle": "0.9.10",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.6",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.2",
@@ -326,14 +328,15 @@
     "@sap/ux-specification": "1.78.10",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.0.14",
     "@sap/ux-ui5-tooling": "1.0.19",
-    "@sap/vscode-cds": "2.6.0",
+    "@sap/vscode-cds": "3.0.0",
+    "@sap/wing-run-config-types": "4.1.3",
     "@sap/wing-service-binding": "1.9.1",
     "@sap/wing-service-explorer": "1.6.0",
-    "@sap/xb-msg": "0.9.9",
-    "@sap/xb-msg-amqp-v091": "0.9.9",
-    "@sap/xb-msg-amqp-v100": "0.9.40",
+    "@sap/xb-msg": "0.9.12",
+    "@sap/xb-msg-amqp-v091": "0.9.12",
+    "@sap/xb-msg-amqp-v100": "0.9.48",
     "@sap/xb-msg-env": "0.9.4",
-    "@sap/xb-msg-mqtt-v311": "0.9.12",
+    "@sap/xb-msg-mqtt-v311": "0.9.14",
     "@sap/xsenv": "3.0.0",
     "@sap/xsjs": "6.0.6",
     "@sap/xsjs-test": "3.1.3",
