--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "@sap/approuter": "8.6.1",
     "@sap/asp-middleware": "1.0.2",
     "@sap/audit-logging": "3.2.0",
-    "@sap/cds": "4.3.1",
-    "@sap/cds-compiler": "1.45.0",
-    "@sap/cds-dk": "3.2.1",
+    "@sap/cds": "4.4.4",
+    "@sap/cds-compiler": "1.46.6",
+    "@sap/cds-dk": "3.3.1",
     "@sap/cds-dk-foss": "1.0.1",
     "@sap/cds-foss": "2.2.0",
     "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "4.1.1",
+    "@sap/cds-lsp": "4.2.0",
     "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "1.0.22",
+    "@sap/cds-mtx": "1.0.25",
     "@sap/cds-odata-v2-adapter-proxy": "1.4.59",
     "@sap/cds-ql": "1.21.2",
-    "@sap/cds-reflect": "2.13.3",
+    "@sap/cds-reflect": "2.13.4",
     "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.6.8",
+    "@sap/cds-runtime": "2.7.5",
     "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.10",
+    "@sap/cds-sidecar-client": "1.1.11",
     "@sap/cds-sql": "1.24.1",
     "@sap/cds-sqlite": "1.24.1",
     "@sap/cf-tools": "0.6.8",
@@ -78,6 +78,7 @@
     "@sap/cloud-sdk-op-vdm-change-record-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-characteristic-data-for-classification-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-chart-of-accounts-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-class-data-for-classification-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-company-code-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-condition-contract-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-controlling-area-service": "1.23.0",
@@ -180,6 +181,7 @@
     "@sap/cloud-sdk-op-vdm-sales-pricing-procedure-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-sales-quotation-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-sales-scheduling-agreement-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-scheduling-agreement-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-segment-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-service-confirmation-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-service-entry-sheet-service": "1.23.0",
@@ -459,6 +461,7 @@
     "@sap/odata-commons": "2.4.2",
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
+    "@sap/odm": "2.0.0",
     "@sap/open.fe": "1.82.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.9.0-20200908163923",
@@ -480,7 +483,7 @@
     "@sap/ux-specification": "1.78.14",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.0.23",
     "@sap/ux-ui5-tooling": "1.0.25",
-    "@sap/vscode-cds": "3.1.3",
+    "@sap/vscode-cds": "3.2.0",
     "@sap/wing-run-config-types": "4.1.3",
     "@sap/wing-service-binding": "1.9.6",
     "@sap/wing-service-explorer": "1.6.1",
@@ -490,7 +493,7 @@
     "@sap/xb-msg-env": "0.9.6",
     "@sap/xb-msg-mqtt-v311": "0.9.14",
     "@sap/xsenv": "3.1.0",
-    "@sap/xsjs": "6.0.7",
+    "@sap/xsjs": "6.0.8",
     "@sap/xsjs-test": "3.1.3",
     "@sap/xsodata": "7.3.5",
     "@sap/xss-secure": "4.0.0",
