--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.18",
     "@sap/apihub-service-provider": "1.0.2",
-    "@sap/approuter": "9.0.0",
-    "@sap/asp-middleware": "1.0.2",
+    "@sap/approuter": "9.0.1",
+    "@sap/asp-middleware": "1.0.3",
     "@sap/audit-logging": "3.2.0",
-    "@sap/cds": "4.4.6",
+    "@sap/cds": "4.4.7",
     "@sap/cds-compiler": "1.46.6",
-    "@sap/cds-dk": "3.3.2",
+    "@sap/cds-dk": "3.3.3",
     "@sap/cds-dk-foss": "1.0.1",
     "@sap/cds-foss": "2.2.0",
     "@sap/cds-hana": "1.25.2",
@@ -43,7 +43,7 @@
     "@sap/cds-rest": "1.6.3",
     "@sap/cds-runtime": "2.7.8",
     "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.11",
+    "@sap/cds-sidecar-client": "1.1.12",
     "@sap/cds-sql": "1.24.1",
     "@sap/cds-sqlite": "1.24.1",
     "@sap/cf-tools": "0.6.8",
@@ -73,7 +73,6 @@
     "@sap/cloud-sdk-op-vdm-business-situation-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-business-situation-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-business-solution-quotation-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-central-purchase-contract-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-change-master-v2-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-change-record-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-characteristic-data-for-classification-service": "1.23.0",
@@ -83,40 +82,22 @@
     "@sap/cloud-sdk-op-vdm-condition-contract-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-controlling-area-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-controlling-debit-credit-code-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-cost-center-activity-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-cost-center-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-credit-memo-request-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-customer-material-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-customer-return-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-debit-memo-request-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-defect-category-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-defect-class-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-defect-code-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-delivery-document-with-credit-block-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-distribution-channel-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-division-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-document-management-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-equipment-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-explicit-assortment-module-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-financial-planning-data-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-financial-planning-entry-item-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-functional-area-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-functional-location-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-glaccount-in-chart-of-accounts-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-glaccount-line-item-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-group-reporting-master-data-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-group-reporting-transaction-data-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-incoming-vat-invoice-china-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-intelligent-product-proposal-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-journal-entry-item-basic-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-just-in-time-call-process-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-kanban-control-cycle-v2-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-lead-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-ledger-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-legal-category-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-legal-document-access-level-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-legal-document-content-type-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-legal-document-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-legal-transaction-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-manual-accruals-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-master-recipe-service": "1.23.0",
@@ -150,6 +131,7 @@
     "@sap/cloud-sdk-op-vdm-product-time-dependent-stock-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-production-order-confirmation-v2-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-production-order-v2-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-production-routing-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-production-supply-area-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-profit-center-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-purchase-contract-service": "1.23.0",
@@ -446,22 +428,23 @@
     "@sap/grunt-sapui5-bestpractice-test": "2.0.2",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.6",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.6.64",
+    "@sap/hana-client": "2.7.16",
     "@sap/hana-database-explorer": "1.0.0",
     "@sap/hana-sqlscript-lsp": "1.0.1",
+    "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
     "@sap/hdbext": "7.0.1",
     "@sap/hdi": "2.2.7",
     "@sap/hdi-deploy": "3.11.15",
     "@sap/hdi-dynamic-deploy": "1.7.5",
     "@sap/hrtt-core-vscode": "1.0.0",
-    "@sap/html5-app-deployer": "2.2.0",
+    "@sap/html5-app-deployer": "2.3.0",
     "@sap/html5-repo-mock": "1.8.0",
     "@sap/instance-manager": "2.2.0",
     "@sap/jobs-client": "1.6.1",
     "@sap/logging": "6.0.2",
     "@sap/modules-exploration": "1.6.8",
-    "@sap/mta-lib": "1.6.2",
+    "@sap/mta-lib": "1.6.4",
     "@sap/node-jwt": "1.6.13",
     "@sap/node-vsi": "1.4.20",
     "@sap/odata-commons": "2.4.2",
@@ -471,14 +454,14 @@
     "@sap/open.fe": "1.85.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.9.0-20200908163923",
-    "@sap/sbf": "6.2.2",
+    "@sap/sbf": "6.2.3",
     "@sap/sbss": "5.0.0",
     "@sap/sds-deploy": "2.0.5",
     "@sap/service-providers": "0.3.7",
     "@sap/site-app-server": "1.17.0",
     "@sap/site-content-deployer": "1.20.0",
     "@sap/site-entry": "1.30.0",
-    "@sap/swa-for-sapbas-vsx": "1.1.5",
+    "@sap/swa-for-sapbas-vsx": "1.1.8",
     "@sap/textanalysis": "1.1.0",
     "@sap/textbundle": "3.1.0",
     "@sap/textmining": "1.1.6",
