--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@sap/apihub-service-provider": "1.0.5",
     "@sap/approuter": "9.1.0",
     "@sap/asp-middleware": "1.0.4",
-    "@sap/audit-logging": "3.2.0",
+    "@sap/audit-logging": "4.0.0",
     "@sap/cds": "4.5.1",
     "@sap/cds-compiler": "1.49.0",
     "@sap/cds-dk": "3.4.0",
@@ -199,6 +199,8 @@
     "@sap/cloud-sdk-op-vdm-task-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-treasury-position-flow-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-treasury-posting-journal-entry-line-item-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-vehicle-location-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-vehicle-service": "1.23.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.23.0",
     "@sap/cloud-sdk-vdm-activity-type-service": "1.23.0",
     "@sap/cloud-sdk-vdm-api-legal-document-status-service": "1.23.0",
@@ -413,7 +415,7 @@
     "@sap/consume-services-types": "0.3.11",
     "@sap/create-hana-database-artifact": "1.0.0",
     "@sap/destinations": "0.2.1",
-    "@sap/di.code-validation.core": "1.0.13",
+    "@sap/di.code-validation.core": "1.0.16",
     "@sap/di.code-validation.grunt": "1.0.7",
     "@sap/di.code-validation.js": "1.1.9",
     "@sap/di.code-validation.json": "1.0.10",
@@ -507,6 +509,6 @@
     "@sap/xsjs-test": "3.1.3",
     "@sap/xsodata": "7.3.5",
     "@sap/xss-secure": "4.0.0",
-    "@sap/xssec": "3.0.10"
+    "@sap/xssec": "3.1.0"
   }
 }
