--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
     "@sap/cloud-sdk-op-vdm-treasury-posting-journal-entry-line-item-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-vehicle-location-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-vehicle-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-work-centers-service": "1.23.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.23.0",
     "@sap/cloud-sdk-vdm-activity-type-service": "1.23.0",
     "@sap/cloud-sdk-vdm-api-legal-document-status-service": "1.23.0",
@@ -439,7 +440,7 @@
     "@sap/generator-base-mta-module": "1.3.4",
     "@sap/generator-cap-project": "1.4.2",
     "@sap/generator-cds": "2.17.4",
-    "@sap/generator-fiori": "1.1.0",
+    "@sap/generator-fiori": "1.1.1",
     "@sap/generator-fiori-elements": "1.1.0",
     "@sap/generator-fiori-freestyle": "1.1.0",
     "@sap/generator-hdb-project": "1.0.0",
@@ -454,9 +455,9 @@
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
     "@sap/hdbext": "7.1.1",
-    "@sap/hdi": "3.0.1",
-    "@sap/hdi-deploy": "4.0.1",
-    "@sap/hdi-dynamic-deploy": "2.0.0",
+    "@sap/hdi": "3.0.2",
+    "@sap/hdi-deploy": "4.0.2",
+    "@sap/hdi-dynamic-deploy": "2.0.1",
     "@sap/hrtt-core-vscode": "1.0.0",
     "@sap/html5-app-deployer": "2.3.0",
     "@sap/html5-repo-mock": "2.0.1",
@@ -509,6 +510,6 @@
     "@sap/xsjs-test": "3.1.3",
     "@sap/xsodata": "7.3.5",
     "@sap/xss-secure": "4.0.0",
-    "@sap/xssec": "3.1.0"
+    "@sap/xssec": "3.1.1"
   }
 }
