--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@sap/asp-middleware": "1.0.4",
     "@sap/audit-logging": "5.0.0",
     "@sap/cds": "4.6.5",
-    "@sap/cds-compiler": "1.50.0",
+    "@sap/cds-compiler": "1.50.2",
     "@sap/cds-dk": "3.5.1",
     "@sap/cds-dk-foss": "1.0.2",
     "@sap/cds-foss": "2.2.1",
@@ -317,6 +317,7 @@
     "@sap/cloud-sdk-vdm-group-reporting-master-data-service": "1.24.0",
     "@sap/cloud-sdk-vdm-group-reporting-transaction-data-service": "1.24.0",
     "@sap/cloud-sdk-vdm-handling-unit-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-in-house-repair-service": "1.24.0",
     "@sap/cloud-sdk-vdm-inbound-delivery-service": "1.24.0",
     "@sap/cloud-sdk-vdm-inbound-delivery-v2-service": "1.24.0",
     "@sap/cloud-sdk-vdm-incoming-vat-invoice-china-service": "1.24.0",
@@ -337,6 +338,7 @@
     "@sap/cloud-sdk-vdm-legal-document-content-type-service": "1.24.0",
     "@sap/cloud-sdk-vdm-legal-document-service": "1.24.0",
     "@sap/cloud-sdk-vdm-legal-transaction-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-maintenance-notification-service": "1.24.0",
     "@sap/cloud-sdk-vdm-maintenance-order-confirmation-service": "1.24.0",
     "@sap/cloud-sdk-vdm-maintenance-task-list-service": "1.24.0",
     "@sap/cloud-sdk-vdm-manual-contract-accruals-service": "1.24.0",
@@ -389,6 +391,7 @@
     "@sap/cloud-sdk-vdm-purchase-order-service": "1.24.0",
     "@sap/cloud-sdk-vdm-purchase-requisition-service": "1.24.0",
     "@sap/cloud-sdk-vdm-purchasing-category-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-purchasing-info-record-service": "1.24.0",
     "@sap/cloud-sdk-vdm-purchasing-pricing-condition-record-service": "1.24.0",
     "@sap/cloud-sdk-vdm-purchasing-pricing-condition-type-service": "1.24.0",
     "@sap/cloud-sdk-vdm-purchasing-pricing-procedure-service": "1.24.0",
@@ -413,6 +416,7 @@
     "@sap/cloud-sdk-vdm-sales-order-simulation-service": "1.24.0",
     "@sap/cloud-sdk-vdm-sales-order-without-charge-service": "1.24.0",
     "@sap/cloud-sdk-vdm-sales-organization-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-sales-price-service": "1.24.0",
     "@sap/cloud-sdk-vdm-sales-pricing-condition-record-service": "1.24.0",
     "@sap/cloud-sdk-vdm-sales-pricing-condition-type-service": "1.24.0",
     "@sap/cloud-sdk-vdm-sales-pricing-procedure-service": "1.24.0",
@@ -439,7 +443,9 @@
     "@sap/cloud-sdk-vdm-supplier-evaluation-score-service": "1.24.0",
     "@sap/cloud-sdk-vdm-supplier-evaluation-scorecard-service": "1.24.0",
     "@sap/cloud-sdk-vdm-supplier-invoice-process-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-supplier-item-service": "1.24.0",
     "@sap/cloud-sdk-vdm-supplier-quotation-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-supply-availability-protection-plan-service": "1.24.0",
     "@sap/cloud-sdk-vdm-treasury-position-flow-service": "1.24.0",
     "@sap/cloud-sdk-vdm-treasury-posting-journal-entry-line-item-service": "1.24.0",
     "@sap/cloud-sdk-vdm-trial-balance-service": "1.24.0",
@@ -498,9 +504,9 @@
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
     "@sap/hdbext": "7.1.4",
-    "@sap/hdi": "3.0.2",
-    "@sap/hdi-deploy": "4.0.3",
-    "@sap/hdi-dynamic-deploy": "2.1.0",
+    "@sap/hdi": "4.0.1",
+    "@sap/hdi-deploy": "4.0.4",
+    "@sap/hdi-dynamic-deploy": "2.1.1",
     "@sap/hrtt-core-vscode": "1.1.0",
     "@sap/html5-app-deployer": "3.0.0",
     "@sap/html5-repo-mock": "2.0.1",
