--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@sap/approuter": "10.4.2",
     "@sap/asp-middleware": "1.0.6",
     "@sap/audit-logging": "5.0.0",
+    "@sap/bas-sdk-cf-utils": "1.2.0",
     "@sap/cds": "5.1.5",
     "@sap/cds-compiler": "2.2.8",
     "@sap/cds-dk": "4.1.5",
@@ -37,7 +38,7 @@
     "@sap/cds-lsp": "5.0.5",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "2.0.2",
-    "@sap/cds-odata-v2-adapter-proxy": "1.7.3",
+    "@sap/cds-odata-v2-adapter-proxy": "1.7.4",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
@@ -517,7 +518,7 @@
     "@sap/fibrous": "0.5.0-6",
     "@sap/fiori-json-services": "1.0.1",
     "@sap/generator-add-hdb-module": "1.2.0",
-    "@sap/generator-base-mta-module": "1.3.5",
+    "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.4.2",
     "@sap/generator-cds": "2.17.7",
     "@sap/generator-fiori": "1.2.1",
@@ -547,7 +548,7 @@
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.0.3",
     "@sap/modules-exploration": "1.6.10",
-    "@sap/mta-lib": "1.7.1",
+    "@sap/mta-lib": "1.7.3",
     "@sap/node-jwt": "1.6.15",
     "@sap/node-vsi": "1.4.21",
     "@sap/odata-commons": "2.4.2",
