updated VDM packages

--- a/package.json
+++ b/package.json
@@ -554,6 +554,7 @@
     "@sap/cloud-sdk-vdm-sales-price-service": "1.28.2",
     "@sap/cloud-sdk-vdm-sales-pricing-condition-record-service": "1.28.2",
     "@sap/cloud-sdk-vdm-sales-pricing-condition-type-service": "1.28.2",
+    "@sap/cloud-sdk-vdm-sales-pricing-procedure-service": "1.28.2",
     "@sap/cloud-sdk-vdm-sales-quotation-service": "1.28.2",
     "@sap/cloud-sdk-vdm-sales-scheduling-agreement-service": "1.28.2",
     "@sap/cloud-sdk-vdm-scheduling-agreement-service": "1.28.2",
@@ -585,6 +586,7 @@
     "@sap/cloud-sdk-vdm-supplier-evaluation-scorecard-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-invoice-process-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supplier-item-service": "1.28.2",
+    "@sap/cloud-sdk-vdm-supplier-quotation-service": "1.28.2",
     "@sap/cloud-sdk-vdm-supply-availability-protection-plan-service": "1.28.2",
     "@sap/cloud-sdk-vdm-task-code-service": "1.28.2",
     "@sap/cloud-sdk-vdm-time-dependent-stock-level-service": "1.28.2",
