--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "@sap/cloud-sdk-op-vdm-inspection-method-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-inspection-plan-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-intelligent-product-proposal-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-journal-entry-item-basic-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-just-in-time-call-process-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-kanban-control-cycle-v2-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-lead-service": "2.0.0",
@@ -178,6 +179,8 @@
     "@sap/cloud-sdk-op-vdm-maintenance-task-list-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-manual-accruals-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-master-inspection-characteristic-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-master-recipe-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-material-document-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-material-planning-data-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-material-requirement-planning-change-request-priority-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-material-requirement-planning-change-request-reason-service": "2.0.0",
@@ -253,6 +256,7 @@
     "@sap/cloud-sdk-op-vdm-responsibility-management-team-configuration-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-responsibility-management-team-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-returns-inspection-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-sales-and-distribution-document-reason-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-sales-area-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-sales-contract-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-sales-district-service": "2.0.0",
@@ -272,6 +276,7 @@
     "@sap/cloud-sdk-op-vdm-segmentation-structure-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-service-confirmation-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-service-entry-sheet-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-service-order-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-service-order-template-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-service-request-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-settlement-document-service": "2.0.0",
@@ -710,7 +715,7 @@
     "@sap/hdi-deploy": "4.3.0",
     "@sap/hdi-dynamic-deploy": "2.3.3",
     "@sap/hrtt-core-vscode": "1.8.0",
-    "@sap/html5-app-deployer": "3.2.0",
+    "@sap/html5-app-deployer": "4.0.0",
     "@sap/html5-repo-mock": "2.1.0",
     "@sap/instance-manager": "3.3.1",
     "@sap/jobs-client": "1.6.3",
@@ -745,7 +750,7 @@
     "@sap/ui5-builder-webide-extension": "1.1.7",
     "@sap/ui5-visual-editor": "1.1.14",
     "@sap/ux-cds-odata-language-server-extension": "1.5.1",
-    "@sap/ux-specification": "1.96.4",
+    "@sap/ux-specification": "1.96.5",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.5.1",
     "@sap/ux-ui5-tooling": "1.5.1",
     "@sap/vscode-cds": "4.5.2",
