--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-service-provider": "1.2.2",
-    "@sap/approuter": "10.14.0",
+    "@sap/approuter": "10.14.2",
     "@sap/artifact-management": "1.8.1",
     "@sap/artifact-management-base": "1.8.1",
     "@sap/artifact-management-base-types": "1.8.1",
     "@sap/artifact-management-types": "1.8.1",
     "@sap/asp-middleware": "1.0.8",
-    "@sap/audit-logging": "5.5.1",
+    "@sap/audit-logging": "5.5.2",
     "@sap/bas-sdk-cf-utils": "1.2.0",
     "@sap/cds": "5.8.4",
     "@sap/cds-compiler": "2.12.0",
@@ -343,6 +343,7 @@
     "@sap/cloud-sdk-vdm-buffer-profile-service": "2.0.0",
     "@sap/cloud-sdk-vdm-buffer-sizing-service": "2.0.0",
     "@sap/cloud-sdk-vdm-business-area-service": "2.0.0",
+    "@sap/cloud-sdk-vdm-business-event-queue-service": "2.0.0",
     "@sap/cloud-sdk-vdm-business-event-subscription-service": "2.0.0",
     "@sap/cloud-sdk-vdm-business-partner-service": "2.0.0",
     "@sap/cloud-sdk-vdm-business-place-service": "2.0.0",
@@ -672,7 +673,7 @@
     "@sap/di.code-validation.js": "2.0.0",
     "@sap/di.code-validation.json": "1.0.13",
     "@sap/di.code-validation.xml": "1.1.28",
-    "@sap/dwc-cli": "2022.6.0",
+    "@sap/dwc-cli": "2022.7.0",
     "@sap/dwf-core": "2.2.1",
     "@sap/dwf-deploy": "2.4.0",
     "@sap/dwf-dlm-backend": "2.3.0",
@@ -694,7 +695,7 @@
     "@sap/generator-add-hdb-module": "1.3.0",
     "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.6.4",
-    "@sap/generator-cds": "2.17.7",
+    "@sap/generator-cds": "2.17.8",
     "@sap/generator-fiori": "1.5.2",
     "@sap/generator-hdb-project": "1.3.0",
     "@sap/graph-toolkit": "3.0.5",
@@ -733,7 +734,7 @@
     "@sap/open.fe": "1.99.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.20.0-20220206072628",
-    "@sap/sbf": "6.4.4",
+    "@sap/sbf": "6.4.5",
     "@sap/sbss": "5.3.0",
     "@sap/sds-deploy": "2.0.5",
     "@sap/service-provider-apis": "1.5.0",
