--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "@sap/artifact-management-types": "1.10.0",
     "@sap/asp-middleware": "1.0.8",
     "@sap/audit-logging": "5.5.3",
+    "@sap/bas-sdk": "2.0.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "5.9.3",
+    "@sap/cds": "5.9.4",
     "@sap/cds-compiler": "2.13.8",
     "@sap/cds-dk": "4.9.3",
     "@sap/cds-dk-foss": "1.0.2",
@@ -77,6 +78,7 @@
     "@sap/cloud-sdk-op-vdm-buffer-profile-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-buffer-sizing-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-business-area-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-business-event-queue-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-business-event-subscription-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-business-partner-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-business-place-service": "2.0.0",
@@ -121,6 +123,7 @@
     "@sap/cloud-sdk-op-vdm-credit-management-master-data-integration-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-credit-memo-request-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-customer-group-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-customer-material-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-customer-return-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-customer-returns-delivery-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-customer-supplier-industry-service": "2.0.0",
@@ -132,7 +135,7 @@
     "@sap/cloud-sdk-op-vdm-defect-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-delivery-document-with-credit-block-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-detection-method-service": "2.0.0",
-    "@sap/cloud-sdk-op-vdm-division-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-distribution-channel-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-document-management-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-equipment-hierarchy-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-equipment-service": "2.0.0",
@@ -225,6 +228,7 @@
     "@sap/cloud-sdk-op-vdm-production-order-confirmation-v2-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-production-order-v2-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-production-routing-service": "2.0.0",
+    "@sap/cloud-sdk-op-vdm-production-supply-area-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-profit-center-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-project-definition-service": "2.0.0",
     "@sap/cloud-sdk-op-vdm-project-service": "2.0.0",
@@ -447,6 +451,7 @@
     "@sap/cloud-sdk-vdm-glaccount-line-item-service": "2.0.0",
     "@sap/cloud-sdk-vdm-golden-tax-interface-customer-type-service": "2.0.0",
     "@sap/cloud-sdk-vdm-grant-hierarchy-service": "2.0.0",
+    "@sap/cloud-sdk-vdm-grant-service": "2.0.0",
     "@sap/cloud-sdk-vdm-group-reporting-master-data-service": "2.0.0",
     "@sap/cloud-sdk-vdm-group-reporting-transaction-data-service": "2.0.0",
     "@sap/cloud-sdk-vdm-handling-unit-service": "2.0.0",
@@ -693,7 +698,7 @@
     "@sap/generator-cds": "2.17.8",
     "@sap/generator-fiori": "1.5.5",
     "@sap/generator-hdb-project": "1.4.0",
-    "@sap/graph-toolkit": "3.0.5",
+    "@sap/graph-toolkit": "3.0.7",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.15",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
@@ -706,7 +711,7 @@
     "@sap/hana-sqlscript-lsp": "1.6.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.1",
-    "@sap/hdbext": "7.6.3",
+    "@sap/hdbext": "7.6.4",
     "@sap/hdi": "4.3.1",
     "@sap/hdi-deploy": "4.3.3",
     "@sap/hdi-dynamic-deploy": "2.3.5",
@@ -714,7 +719,7 @@
     "@sap/html5-app-deployer": "4.0.1",
     "@sap/html5-repo-mock": "2.1.0",
     "@sap/instance-manager": "3.3.2",
-    "@sap/jobs-client": "1.6.3",
+    "@sap/jobs-client": "1.7.0",
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.1.1",
     "@sap/mdk-tools": "1.2.1",
@@ -726,7 +731,7 @@
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
     "@sap/odm": "2.0.0",
-    "@sap/open.fe": "1.100.0",
+    "@sap/open.fe": "1.101.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.20.0-20220206072628",
     "@sap/sbf": "6.4.6",
